# Changelog
All notable changes to this project will be documented in this file.

## [1.9.9] 2026-02-03

### Added
- Implemented Velocity Autocorrelation Function (VACF) calculation.
- Added `velocities_` storage and calculation to `Trajectory`.
- Added `DynamicsAnalyzer` class for computing dynamic properties (VACF, Normalized VACF).
## [1.9.8] 2026-02-02

### Added
- Added "START" and "END" keywords to Min/Max Frame selection for easier trajectory range handling.
- Reintegrated `LinearProgressIndicator` and `CircularProgressIndicator` to Material 1.0 library.
- Added native Save File Dialog for "Write Files" output selection.

### Fixed
- Corrected PAD (Plane Angle Distribution) calculations to match v1.0.4 results.

### Changed
- Updated progress bar logic and UI to use `LinearProgressIndicator` for consistent Material Design aesthetics.

## [1.9.7] 2026-01-29

### Changed
- Removed `theta_cut` argument from `calculatePAD` (fixed to 180°).
- Refactored `CMakeLists.txt` to modularize dependencies and tests.
## [1.9.6] 2026-01-27

### Added
- Implemented asynchronous analysis to prevent the GUI from freezing during calculations.
- Added a progress bar to visualize analysis status.
- Separated "Analyze" and "Write Files" into distinct actions.

### Fixed
- Fixed implicit capture of `this` warning in `AppController.cpp` (C++20).

## [1.9.5] 2026-01-26

### Added
- Implemented trajectory averaging to calculate mean distributions over selected frames.
- Added controls for frame range selection (Minimum/Maximum Frame).
- Enhanced `FileInfoCard` to show detailed file statistics: frame count, element types/counts, and total atoms.

### Changed
- Refined `AppWindow` layout to a two-column design for better use of screen space.
- Improved component visibility: inactive UI elements are now disabled instead of hidden.
- Refactored `DistributionFunctions` to support histogram accumulation.