@@ -1,3 +1,8 @@
+// Correlation - Liquid and Amorphous Solid Analysis Tool
+// Copyright © 2013-2026 Isaías Rodríguez (isurwars@gmail.com)
+// SPDX-License-Identifier: MIT
+// Full license: https://github.com/Isurwars/Correlation/blob/main/LICENSE
+
 #include <gtest/gtest.h>
 #include <string>
 #include <vector>
@@ -12,6 +17,22 @@
 // Test fixture for Trajectory tests
 class TrajectoryRevisionTest : public ::testing::Test {
 protected:
+  // Helper to create a dummy frame with a specific position for an atom
+  Cell createFrame(double x, double y, double z) {
+      // Create a simple cubic lattice
+      linalg::Vector3<double> a = {10.0, 0.0, 0.0};
+      linalg::Vector3<double> b = {0.0, 10.0, 0.0};
+      linalg::Vector3<double> c = {0.0, 0.0, 10.0};
+      
+      Cell frame(a, b, c);
+      
+      // Add one atom
+      // addAtom automatically handles element registration
+      frame.addAtom("H", {x, y, z});
+      
+      return frame;
+  }
+
   void SetUp() override {
     // Create a temporary directory for test files
     std::filesystem::create_directory("test_data");
@@ -49,8 +70,10 @@ TEST_F(TrajectoryRevisionTest, RemoveDuplicatedFrames) {
   std::vector<Cell> frames = {c1, c2, c3, c4, c5};
   Trajectory traj(frames, 1.0);
 
-  EXPECT_EQ(traj.getFrameCount(), 5);
+  // Duplicates are removed in constructor now
+  EXPECT_EQ(traj.getFrameCount(), 3);
 
+  // Redundant call should not change anything
   traj.removeDuplicatedFrames();
 
   EXPECT_EQ(traj.getFrameCount(), 3);
@@ -115,29 +138,63 @@ TEST_F(TrajectoryRevisionTest, ParseMultipleFramesWithEnergy) {
     EXPECT_DOUBLE_EQ(frames[1].getEnergy(), -200.5);
 }
 
-TEST_F(TrajectoryRevisionTest, RemoveDuplicatesFromRealFile) {
-    // This file is known to have duplicates
-    // Using absolute path to ensure checking the specific file requested
-    std::string filename = "/home/isurwars/Projects/Correlation/examples/l-Bi/l-Bi.arc";
+TEST_F(TrajectoryRevisionTest, RemovesConsecutiveTriplicates) {
+    std::vector<Cell> frames;
     
-    // Check if file exists to avoid failing if example is missing (though user said it's there)
-    if (!std::filesystem::exists(filename)) {
-        GTEST_SKIP() << "Test file not found: " << filename;
-    }
-
-    auto traj = FileIO::readTrajectory(filename, FileIO::FileType::Arc);
-    size_t initial_count = traj.getFrameCount();
-    std::cout << "Initial frame count: " << initial_count << std::endl;
-
-    auto time_start = std::chrono::high_resolution_clock::now();
-    traj.removeDuplicatedFrames();
-    auto time_end = std::chrono::high_resolution_clock::now();
+    // Frame 0: (0,0,0)
+    frames.push_back(createFrame(0.0, 0.0, 0.0));
     
-    size_t final_count = traj.getFrameCount();
-    std::cout << "Final frame count: " << final_count << std::endl;
-    std::cout << "Removed: " << (initial_count - final_count) << " frames" << std::endl;
-    std::cout << "Time taken: " << std::chrono::duration_cast<std::chrono::milliseconds>(time_end - time_start).count() << "ms" << std::endl;
+    // Frame 1: (0,0,0) - Duplicate of Frame 0
+    frames.push_back(createFrame(0.0, 0.0, 0.0));
+    
+    // Frame 2: (1,1,1) - Distinct
+    frames.push_back(createFrame(1.0, 1.0, 1.0));
+    
+    // Frame 3: (1,1,1) - Duplicate of Frame 2
+    frames.push_back(createFrame(1.0, 1.0, 1.0));
+    
+    // Frame 4: (1,1,1) - Triplicate of Frame 2 (Duplicate of Frame 3)
+    frames.push_back(createFrame(1.0, 1.0, 1.0));
+    
+    // Frame 5: (2,2,2) - Distinct
+    frames.push_back(createFrame(2.0, 2.0, 2.0));
 
-    EXPECT_LT(final_count, initial_count);
-    EXPECT_NEAR(initial_count - final_count, 100, 20); // Expect around 100 duplicates
+    // Initialize Trajectory
+    Trajectory traj(frames, 1.0);
+    
+    // We expect frames 0, 2, and 5 to remain.
+    // That is 3 frames total.
+    EXPECT_EQ(traj.getFrameCount(), 3);
+    EXPECT_EQ(traj.getRemovedFrameCount(), 3); // 3 frames removed (1, 3, 4)
+    
+    const auto& result_frames = traj.getFrames();
+    ASSERT_EQ(result_frames.size(), 3);
+    
+    // Verify positions to ensure correct frames were kept
+    EXPECT_NEAR(result_frames[0].atoms()[0].position()[0], 0.0, 1e-6);
+    EXPECT_NEAR(result_frames[1].atoms()[0].position()[0], 1.0, 1e-6);
+    EXPECT_NEAR(result_frames[2].atoms()[0].position()[0], 2.0, 1e-6);
 }
+
+TEST_F(TrajectoryRevisionTest, HandlesNoDuplicates) {
+    std::vector<Cell> frames;
+    frames.push_back(createFrame(0.0, 0.0, 0.0));
+    frames.push_back(createFrame(1.0, 1.0, 1.0));
+    frames.push_back(createFrame(2.0, 2.0, 2.0));
+
+    Trajectory traj(frames, 1.0);
+    EXPECT_EQ(traj.getFrameCount(), 3);
+}
+
+TEST_F(TrajectoryRevisionTest, HandlesAllDuplicates) {
+    std::vector<Cell> frames;
+    frames.push_back(createFrame(0.0, 0.0, 0.0));
+    frames.push_back(createFrame(0.0, 0.0, 0.0));
+    frames.push_back(createFrame(0.0, 0.0, 0.0));
+
+    Trajectory traj(frames, 1.0);
+    // Should keep only the first one
+    EXPECT_EQ(traj.getFrameCount(), 1);
+}
+
+
